# ITKscripts

./: .gitignore  README.md
ExtractSlice/: .ExtractSlice.cpp.swp  CMakeLists.txt  ExtractSlice.cpp  MaximumProjection.cpp
ExtractSlice/debug/: CMakeCache.txt
HistogramSlice/: CMakeLists.txt  HistogramSlice.cpp
HistogramSlice/debug/: cmake_install.cmake
IntenseSlice/: .IntenseSlice.cpp.swp  CMakeLists.txt  IntenseSlice.cpp
MaximumProjection/: .MaximumProjection.cpp.swp  CMakeLists.txt  MaximumProjection.cpp
NormalizeIntense/: .IntenseSlice.cpp.swp  .NormalizeIntense.cpp.swp  .gitignore  CMakeLists.txt  NormalizeIntense.cpp  NormalizeIntense2.cpp
NormalizeIntense/debug/: Makefile
